Creacion CRUD Empleado

--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudAdministradorCompra/Index">Administrador de Compra</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudEmpleado/Index">Empleado</a>
                         </li>
 
                         <li class="nav-item">
@@ -33,10 +33,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CrudProducto/Index">Productos</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudVendedor/Index">Vendedores</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a>
                         </li>
