--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
@@ -15,22 +15,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Empleado.CodigoEmpleado" class="control-label"></label>
-                <input asp-for="Empleado.CodigoEmpleado" class="form-control" />
+                <input asp-for="Empleado.CodigoEmpleado" class="form-control" required/>
                 <span asp-validation-for="Empleado.CodigoEmpleado" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.Sucursal" class="control-label"></label>
-                <input asp-for="Empleado.Sucursal" class="form-control" />
+                <input asp-for="Empleado.Sucursal" class="form-control" required/>
                 <span asp-validation-for="Empleado.Sucursal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.Usuario" class="control-label"></label>
-                <input asp-for="Empleado.Usuario" class="form-control" />
+                <input asp-for="Empleado.Usuario" class="form-control" required/>
                 <span asp-validation-for="Empleado.Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.Contraseña" class="control-label"></label>
-                <input asp-for="Empleado.Contraseña" class="form-control" />
+                <input asp-for="Empleado.Contraseña" class="form-control" required/>
                 <span asp-validation-for="Empleado.Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,22 +45,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.Nombres" class="control-label"></label>
-                <input asp-for="Empleado.Nombres" class="form-control" />
+                <input asp-for="Empleado.Nombres" class="form-control" required/>
                 <span asp-validation-for="Empleado.Nombres" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.Apellidos" class="control-label"></label>
-                <input asp-for="Empleado.Apellidos" class="form-control" />
+                <input asp-for="Empleado.Apellidos" class="form-control" required/>
                 <span asp-validation-for="Empleado.Apellidos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.TipoDocumento" class="control-label"></label>
-                <input asp-for="Empleado.TipoDocumento" class="form-control" />
+                <input asp-for="Empleado.TipoDocumento" class="form-control" required/>
                 <span asp-validation-for="Empleado.TipoDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.NumeroDocumento" class="control-label"></label>
-                <input asp-for="Empleado.NumeroDocumento" class="form-control" />
+                <input asp-for="Empleado.NumeroDocumento" class="form-control" required/>
                 <span asp-validation-for="Empleado.NumeroDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
