--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudCliente/Index">Cliente</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CrudControl/Index">Controles</a>
                         </li>
 
@@ -36,6 +40,10 @@
                         
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudConsola1/Index">Consola</a>
                         </li>
                     </ul>
                 </div>
