--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -7,44 +7,36 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body style = "background-color: #ffe800;">
+
+<body class="box">   
+    <input type="checkbox" id="chec">
+                <label for="chec">
+                   <img src="~/img/menuuu.png" width="40" height="40" >
+                </label>      
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Presentacion</a>
+        <nav>
+                    <ul>
+                        <div class="container">
+                
+                        <li><a class="nav-link colorText" asp-area="" asp-page="/Index">EXITO</a> </li>
+                        <li><a class="nav-link colorText" asp-area="" asp-page="/CrudAdministradorCompra/Index">Administrador de Compra</a> </li>
+                        <li class="nav-item">
+                            <a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index">Controles</a>
+                        </li>
+
+                        <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudProducto/Index">Productos</a></li>
+
+                        <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVendedor/Index">Vendedores</a></li>
+                        <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a></li>   
+                    </ul>
+                </nav>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Inicio</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudEmpleado/Index">Empleado</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudCliente/Index">Cliente</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudControl/Index">Controles</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudProducto/Index">Productos</a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CrudConsola1/Index">Consola</a>
-                        </li>
+                    
                     </ul>
                 </div>
             </div>
@@ -57,9 +49,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Presentacion - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+   
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
