creacion de pagina login

--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -19,11 +19,13 @@
                 <div class="container">
                     <li><a class="nav-link colorText" asp-area="" asp-page="/Index">EXITO</a> </li>
                     <li><a class="nav-link colorText" asp-area="" asp-page="/CrudCliente/Index">Cliente</a> </li>
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/Login/Login">Login</a></li>  
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudConsola1/Index">Consolas</a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index">Controles</a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudProducto/Index">Productos</a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudEmpleado/Index">Empleado</a></li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a></li>   
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a></li>
+ 
                     </ul>
         </nav>
                 
