--- a/Aplicacion/Presentacion/Pages/Login/Login.cshtml
+++ b/Aplicacion/Presentacion/Pages/Login/Login.cshtml
@@ -2,24 +2,26 @@
 @model Presentacion.Pages.LoginModel
 @{
 }
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div class="form-group">
-                <label class="control-label">Usuario</label>
-                <input asp-for="Usuario" type="text" class="form-control" />
-                <span class="text-danger">@Model.Mensaje</span>
-            </div>
+<form method="post">
 
-            <div class="form-group">
-                <label class="control-label">Contraseña</label>
-                <input asp-for="@Model.Contrasena" type="password" class="form-control" />
-                <span class="text-danger">@Model.Mensaje2</span>
-            </div>
+    <div class="form-group">
+        <label class="control-label">Usuario</label>
+        <input type="text" class="form-control"/>
+        <input type="text" class="form-control"/>
 
-            <div class="form-group">
-                <input type="submit" value="Ingresar" class="btn btn-primary" />
-            </div>
-        </form>
     </div>
-</div>
+
+    <div class="form-group">
+        <label class="control-label">Contraseña</label>
+        <input type="password" class="form-control"/>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label"></label>
+        <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Ingresar" class="btn btn-primary" />
+    </div>
+</form>
