--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -17,10 +17,13 @@
         <nav>
             <ul>
                 <div class="container">
+                    <div class="text-center"> <h1> <b> MENÚ</b></h1> </div>
+                   
                     <li><a class="nav-link colorText" asp-area="" asp-page="/Index">EXITO</a> </li>
                     <li><a class="nav-link colorText" asp-area="" asp-page="/CrudCliente/Index">Cliente</a> </li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudConsola1/Index">Consolas</a></li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index">Controles</a></li>
+                 
+                    <li class="nav-item" ><a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index"><img src="~/img/control.png">Controles<img src="~/img/control.png"> </a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudProducto/Index">Productos</a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudEmpleado/Index">Empleado</a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a></li>   
