--- a/Aplicacion/Presentacion/Pages/Login/Login.cshtml
+++ b/Aplicacion/Presentacion/Pages/Login/Login.cshtml
@@ -3,25 +3,31 @@
 @{
 }
 <form method="post">
-
-    <div class="form-group">
-        <label class="control-label">Usuario</label>
-        <input type="text" class="form-control"/>
-        <input type="text" class="form-control"/>
-
+<body>
+ <form class="formulario">
+     <h1>Iniciar sesión</h1>
+     <img id="user" src="~/img/user1.png" width="300" height="300">
+     <div class="contenedor">
+    <div class="input-contenedor">
+        
+        <p >Usuario</p>
+        <input type="text" placeholder="Nombre completo">
+    </div>
+     <div class="input-contenedor">
+        <p >Contraseña</p>
+        <input type="password" placeholder="contraseña">
+    </div>
+    <div>
+        <input type="submit" value="Ingresar" class="button">
     </div>
 
-    <div class="form-group">
-        <label class="control-label">Contraseña</label>
-        <input type="password" class="form-control"/>
-    </div>
+     </div>
 
-    <div class="form-group">
-        <label class="control-label"></label>
-        <input type="text" class="form-control" />
-    </div>
+ </form>   
 
-    <div class="form-group">
-        <input type="submit" value="Ingresar" class="btn btn-primary" />
-    </div>
+    
+
+
+</body>
+    
 </form>
