--- a/Aplicacion/Presentacion/wwwroot/css/site.css
+++ b/Aplicacion/Presentacion/wwwroot/css/site.css
@@ -35,9 +35,19 @@ label{
   background-color: #000000;
 }
 
+label2{
+  
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  background-color: #000000;
+}
 .colorText {
   color: #000000;
 }
+
+
 
 .texto_ede{
   color: #000000;
