--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Index.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Empleado[0].Usuario)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].Contraseña)
+                @Html.DisplayNameFor(model => model.Empleado[0].Password)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Empleado[0].NombreRol)
@@ -56,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.Usuario)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Contraseña)
+                @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NombreRol)
