--- a/Aplicacion/Presentacion/Pages/Login/Login.cshtml
+++ b/Aplicacion/Presentacion/Pages/Login/Login.cshtml
@@ -3,31 +3,24 @@
 @{
 }
 <form method="post">
-<body>
- <form class="formulario">
-     <h1>Iniciar sesión</h1>
-     <img id="user" src="~/img/user1.png" width="300" height="300">
-     <div class="contenedor">
-    <div class="input-contenedor">
-        
-        <p >Usuario</p>
-        <input type="text" placeholder="Nombre completo">
+
+    <h1>Iniciar sesión</h1>
+    <img id="user" src="~/img/user1.png" width="300" height="300">
+    <div class="contenedor">
+        <div class="input-contenedor">
+
+            <p>Usuario</p>
+            <input asp-for="Usuario" type="text" placeholder="Nombre completo" class="form-control">
+            <span class="text-danger">@Model.Mensaje2</span>
+
+        </div>
+        <div class="form-group">
+            <p>Contraseña</p>
+            <input asp-for="Contrasena" type="password" placeholder="contraseña" class="form-control">
+            <span class="text-danger">@Model.Mensaje</span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Ingresar" class="button">
+        </div>
     </div>
-     <div class="input-contenedor">
-        <p >Contraseña</p>
-        <input type="password" placeholder="contraseña">
-    </div>
-    <div>
-        <input type="submit" value="Ingresar" class="button">
-    </div>
-
-     </div>
-
- </form>   
-
-    
-
-
-</body>
-    
 </form>
