--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Details.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Empleado.Usuario)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Contraseña)
+            @Html.DisplayNameFor(model => model.Empleado.Password)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Contraseña)
+            @Html.DisplayFor(model => model.Empleado.Password)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Empleado.NombreRol)
