--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Empleado.Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Empleado.Password" class="control-label"></label>
-                <input asp-for="Empleado.Password" class="form-control" required/>
-                <span asp-validation-for="Empleado.Password" class="text-danger"></span>
+                <label asp-for="Empleado.Contraseña" class="control-label"></label>
+                <input asp-for="Empleado.Contraseña" class="form-control" required/>
+                <span asp-validation-for="Empleado.Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empleado.NombreRol" class="control-label"></label>
