--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Delete.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Empleado.Usuario)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Password)
+            @Html.DisplayNameFor(model => model.Empleado.Contraseña)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Password)
+            @Html.DisplayFor(model => model.Empleado.Contraseña)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Empleado.NombreRol)
