--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,10 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Login</a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Inicio</a>
                         </li>
@@ -48,11 +52,6 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Presentacion - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
