--- a/Aplicacion/Presentacion/Pages/Login/Login.cshtml
+++ b/Aplicacion/Presentacion/Pages/Login/Login.cshtml
@@ -2,25 +2,28 @@
 @model Presentacion.Pages.LoginModel
 @{
 }
-<form method="post">
 
-    <h1>Iniciar sesión</h1>
-    <img id="user" src="~/img/user1.png" width="300" height="300">
-    <div class="contenedor">
-        <div class="input-contenedor">
+<form class="post">
 
-            <p>Usuario</p>
-            <input asp-for="Usuario" type="text" placeholder="Nombre completo" class="form-control">
+    <div class="contenedor text-center ">
+        
+         <img id="user" src="~/img/user1.png" width="300" height="300">
+        <h1><b>Iniciar sesión</b></h1>
+        <div class="input-contenedor text-center">
+
+            <h3><b>Usuario</b></h3>
+            <input asp-for="Usuario"  type="text" placeholder="Nombre completo" class="form-control">
             <span class="text-danger">@Model.Mensaje2</span>
 
         </div>
-        <div class="form-group">
-            <p>Contraseña</p>
+        <div class="form-group text-center">
+            <h3><b>Contraseña</b></h3>
             <input asp-for="Contrasena" type="password" placeholder="contraseña" class="form-control">
             <span class="text-danger">@Model.Mensaje</span>
         </div>
-        <div class="form-group">
-            <input type="submit" value="Ingresar" class="button">
+        <div class="form-group text-center">
+            <input type="submit" value="Ingresar" class="button_login">
         </div>
     </div>
+
 </form>
