--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -17,17 +17,17 @@
         <nav>
             <ul>
                 <div class="container">
-                    <div class="text-center"> <h1> <b> MENÚ</b></h1> </div>
-                   
-                    <li><a class="nav-link colorText" asp-area="" asp-page="/Index">Inicio</a> </li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/Login/Login">Login</a></li> 
-                    <li><a class="nav-link colorText" asp-area="" asp-page="/CrudCliente/Index">Cliente</a> </li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudConsola1/Index">Consolas</a></li>
-                 
-                    <li class="nav-item" ><a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index"><img src="~/img/control.png">Controles</a></li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudProducto/Index">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudEmpleado/Index">Empleado</a></li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index">Videojuegos</a></li>
+                    <div class="containermenu">
+                         <div class="text-center menu"> <h1><img id="exito" src="~/img/exito.png" width="50" height="50"> <b> MENÚ</b></h1> </div>
+                    </div>       
+                    <li><a class="nav-link colorText" asp-area="" asp-page="/Index"><img src="~/img/home.png" width="50" height="50"> <b>Inicio</b></a> </li>
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/Login/Login"><img src="~/img/user1.png" width="50" height="50"><b>Login</b></a></li> 
+                    <li><a class="nav-link colorText" asp-area="" asp-page="/CrudCliente/Index"><img src="~/img/venta.png" width="50" height="50"><b>Cliente</b></a> </li>
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudEmpleado/Index"><img src="~/img/empleado.png" width="50" height="50"><b>Empleado</b></a></li>
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudConsola1/Index"><img src="~/img/consola.png" width="50" height="50"><b>Consolas</b></a></li>
+                    <li class="nav-item" ><a class="nav-link colorText" asp-area="" asp-page="/CrudControl/Index"><img src="~/img/control.png" width="50" height="50"><b>Controles</b></a></li>
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudProducto/Index"><img src="~/img/compra.png" width="50" height="50"><b>Productos</b></a></li>                   
+                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudVideojuego/Index"><img src="~/img/game.png" width="50" height="50"><b>Videojuegos</b></a></li>
  
                     </ul>
         </nav>
