--- a/Aplicacion/Presentacion/Pages/CrudControl/Index.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudControl/Index.cshtml
@@ -2,13 +2,13 @@
 @model Presentacion.Pages.CrudControl.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Control";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Añadir control</a>
 </p>
 <table class="table">
     <thead>
