--- a/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
+++ b/Aplicacion/Presentacion/Pages/Shared/_Layout.cshtml
@@ -18,10 +18,12 @@
             <ul>
                 <div class="container">
                     <div class="containermenu">
-                         <div class="text-center menu"> <h1><img id="exito" src="~/img/exito.png" width="50" height="50"> <b> MENÚ</b></h1> </div>
-                    </div>       
+                        
+                    </div>
+                    <div class="text-center menu"> <h1><img id="exito" src="~/img/exito.png" width="50" height="50"> <b> MENÚ</b></h1> </div>
+                   
                     <li><a class="nav-link colorText" asp-area="" asp-page="/Index"><img src="~/img/home.png" width="50" height="50"> <b>Inicio</b></a> </li>
-                    <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/Login/Login"><img src="~/img/user1.png" width="50" height="50"><b>Login</b></a></li> 
+                    <li><a class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/Login/Login"><img src="~/img/user1.png" width="50" height="50"><b>Login</b></a></li> 
                     <li><a class="nav-link colorText" asp-area="" asp-page="/CrudCliente/Index"><img src="~/img/venta.png" width="50" height="50"><b>Cliente</b></a> </li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudEmpleado/Index"><img src="~/img/empleado.png" width="50" height="50"><b>Empleado</b></a></li>
                     <li class="nav-item"><a class="nav-link colorText" asp-area="" asp-page="/CrudConsola1/Index"><img src="~/img/consola.png" width="50" height="50"><b>Consolas</b></a></li>
