--- a/Aplicacion/Presentacion/wwwroot/css/site.css
+++ b/Aplicacion/Presentacion/wwwroot/css/site.css
@@ -10,6 +10,7 @@ a.navbar-brand {
 }
 ul{
   list-style: none;
+  
 }
 *{
   padding: 0px;
@@ -17,14 +18,17 @@ ul{
 }
 /* Provide sufficient contrast against white background */
 a {
-  display: block;
+
   padding: 20 px 5px;
   color: #000000;
+
 }
 a:hover{
   background-color:rgb(250, 236, 34);
   color: black;
 }
+
+
 
 label{
   
@@ -36,12 +40,8 @@ label{
 }
 
 label2{
-  
-  padding: 5px;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  background-color: #000000;
+  color: #000000;
+  background-color: #ffffff;
 }
 .colorText {
   color: #000000;
@@ -52,6 +52,7 @@ label2{
  
 
 }
+
 
 .contenedor{
 
@@ -67,8 +68,11 @@ label2{
 
 }
 
-
-
+.container1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 .texto_ede{
@@ -87,6 +91,11 @@ label2{
   
 }
 
+table{
+  border-color: #000000;
+  background-color:#ffffff;
+
+}
 
 .fondoarriba {
   background-color: #000000;
@@ -95,8 +104,9 @@ label2{
 
 .btn-primary {
   color: #fff;
-  background-color: #ffffff;
+  background-color: #000000;
   border-color: #ffffff;
+  border-radius: 5px;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -110,6 +120,9 @@ input[type="checkbox"]
 
 }
 
+hr{
+  border-top:none ;
+}
 
 nav {
   background-color: #ffffff;
@@ -160,7 +173,7 @@ button.accept-policy {
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
+  min-height: 120%;
 }
 
 body {
