--- a/Aplicacion/Presentacion/Pages/CrudCliente/Delete.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudCliente/Delete.cshtml
@@ -2,16 +2,19 @@
 @model Presentacion.Pages.CrudCliente.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    <br/>
+    ViewData["Title"] = "Eliminar Cliente";
 }
 
-<h1>Delete</h1>
+<div class="text-center">
+<h1>Eliminar Cliente</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Cliente</h4>
+<h3>Usted desea eliminar este Cliente?</h3>
+</div>
+
+    <div class="contenedor post">
     <hr />
-    <dl class="row">
+    <dl class="row1">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente.Email)
         </dt>
@@ -43,10 +46,12 @@
             @Html.DisplayFor(model => model.Cliente.NumeroDocumento)
         </dd>
     </dl>
-    
+    </div>
+    <div class="text-center">
     <form method="post">
         <input type="hidden" asp-for="Cliente.ClienteId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index"><b>Regresar a la lista</b></a>
     </form>
+    </div>
 </div>
