--- a/Aplicacion/Presentacion/Pages/CrudCliente/Details.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudCliente/Details.cshtml
@@ -2,15 +2,20 @@
 @model Presentacion.Pages.CrudCliente.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    <br/>
+    ViewData["Title"] = "Detalles Cliente";
 }
+<div class="text-center">
+<h1>Detalles del cliente</h1>
+</div>
+<div class="text-center" >
+    <h4>En esta sección podras ver los detalles del Cliente seleccionado</h4> 
+</div>
 
-<h1>Details</h1>
-
-<div>
-    <h4>Cliente</h4>
+<div class="contenedor post">
     <hr />
-    <dl class="row">
+
+    <dl class="row1 ">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente.Email)
         </dt>
@@ -41,9 +46,10 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cliente.NumeroDocumento)
         </dd>
+        
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Cliente.ClienteId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Cliente.ClienteId"><b>Editar</b></a> |
+    <a asp-page="Index"><b>Regresar a la lista</b></a>
 </div>
