--- a/Aplicacion/Presentacion/Pages/CrudCliente/Edit.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudCliente/Edit.cshtml
@@ -2,54 +2,60 @@
 @model Presentacion.Pages.CrudCliente.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    <br/>
+    ViewData["Title"] = "Editar Cliente";
 }
-
-<h1>Edit</h1>
-
-<h4>Cliente</h4>
-<hr />
+<div class="text-center"> 
+<h1>Editar cliente</h1>
+<h4>En esta sección podras modificar el Cliente seleccionado</h4>
+</div>
+<div class="contenedor post">
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Cliente.ClienteId" />
             <div class="form-group">
-                <label asp-for="Cliente.Email" class="control-label"></label>
+                <h4><b>Email</b></h4>
+                <label2 asp-for="Cliente.Email" class="control-label"></label2>
                 <input asp-for="Cliente.Email" class="form-control" />
                 <span asp-validation-for="Cliente.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente.Nombres" class="control-label"></label>
+                <h4><b> Nombres</b></h4>
+                <label2 asp-for="Cliente.Nombres" class="control-label"></label2>
                 <input asp-for="Cliente.Nombres" class="form-control" />
                 <span asp-validation-for="Cliente.Nombres" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente.Apellidos" class="control-label"></label>
+                <h4><b>Apellidos</b></h4>
+                <label2 asp-for="Cliente.Apellidos" class="control-label"></label2>
                 <input asp-for="Cliente.Apellidos" class="form-control" />
                 <span asp-validation-for="Cliente.Apellidos" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente.TipoDocumento" class="control-label"></label>
+                <h4><b>Tipo de documento</b></h4>
+                <label2 asp-for="Cliente.TipoDocumento" class="control-label"></label2>
                 <input asp-for="Cliente.TipoDocumento" class="form-control" />
                 <span asp-validation-for="Cliente.TipoDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente.NumeroDocumento" class="control-label"></label>
+                <h4><b>Numero de documento</b></h4>
+                <label2 asp-for="Cliente.NumeroDocumento" class="control-label"></label2>
                 <input asp-for="Cliente.NumeroDocumento" class="form-control" />
                 <span asp-validation-for="Cliente.NumeroDocumento" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group text-center">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="Index"><b>Regresar a la lista</b></a>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
