--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
@@ -81,7 +81,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index"><b>Regresar a la lista</b></a>
 </div>
 
 @section Scripts {
