--- a/Aplicacion/Presentacion/Pages/CrudCliente/Delete.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudCliente/Delete.cshtml
@@ -50,7 +50,7 @@
     <div class="text-center">
     <form method="post">
         <input type="hidden" asp-for="Cliente.ClienteId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-page="./Index"><b>Regresar a la lista</b></a>
     </form>
     </div>
