--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Create.cshtml
@@ -2,12 +2,14 @@
 @model Presentacion.Pages.CrudEmpleado.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    <br/>
+    ViewData["Title"] = "Crear empleado";
 }
-
-<h1>Crear</h1>
-
-<h4>Empleado</h4>
+<div class="text-center"> 
+<h1><b>Añadir Empleado</b></h1>
+<h3><b>Bienvenido a la sección de Empleados</b></h3>
+</div>
+<div class="contenedor post">
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -74,7 +76,7 @@
                 <span asp-validation-for="Empleado.NumeroDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Añadir" class="btn btn-primary" />
             </div>
         </form>
     </div>
