--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Delete.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Delete.cshtml
@@ -2,16 +2,19 @@
 @model Presentacion.Pages.CrudEmpleado.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    <br/>
+    ViewData["Title"] = "Eliminar Empleado";
 }
 
-<h1>Delete</h1>
+<div class="text-center">
+<h1>Eliminar Empleado</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Empleado</h4>
+<h3>Usted desea eliminar este Empleado?</h3>
+</div>
+    <div class="contenedor post">
     <hr />
-    <dl class="row">
+
+    <dl class="row1">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Empleado.CodigoEmpleado)
         </dt>
@@ -67,10 +70,12 @@
             @Html.DisplayFor(model => model.Empleado.NumeroDocumento)
         </dd>
     </dl>
-    
+    </div>
+    <div class="text-center">
     <form method="post">
         <input type="hidden" asp-for="Empleado.EmpleadoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-page="./Index"><b>Regresar a la lista</b></a>
     </form>
+    </div>
 </div>
