--- a/Aplicacion/Presentacion/Pages/CrudEmpleado/Details.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudEmpleado/Details.cshtml
@@ -2,15 +2,19 @@
 @model Presentacion.Pages.CrudEmpleado.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    <br/>
+    ViewData["Title"] = "Detalles Empleado";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Empleado</h4>
+<div class="text-center">
+<h1>Detalles del Empleado</h1>
+</div>
+<div class="text-center" >
+    <h4>En esta sección podras ver los detalles del Empleado seleccionado</h4> 
+</div>
+<div class="contenedor post">
     <hr />
-    <dl class="row">
+    <dl class="row1">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Empleado.CodigoEmpleado)
         </dt>
@@ -68,6 +72,7 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Empleado.EmpleadoId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Empleado.EmpleadoId"><b>Editar</b></a>  |
+    <a asp-page="./Index"><b>Regresar a la lista</b></a>
 </div>
+
